--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   "main": "app.js",
   "scripts": {
     "test": "test",
-    "start": "npx prisma generate && nodemon server.js"
+    "start": "npx prisma generate && nodemon --exec node --trace-warnings server.js"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
@@ -32,5 +32,6 @@
     "prisma": "^6.7.0",
     "prisma-extension-bark": "^0.2.2",
     "supertest": "^7.1.1"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
