--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
+    "@faker-js/faker": "^9.8.0",
     "@prisma/client": "^6.8.2",
     "@quixo3/prisma-session-store": "^3.1.13",
     "babel-jest": "^29.7.0",
