--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@quixo3/prisma-session-store": "^3.1.13",
     "babel-jest": "^29.7.0",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
