--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-error-boundary": "^6.0.0",
     "react-router-dom": "^7.6.1",
     "react-spinners": "^0.17.0",
+    "socket.io-client": "^4.8.1",
     "vite": "^6.3.5"
   }
 }
