--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   "main": "app.js",
   "scripts": {
     "test": "test",
-    "start": "chmod +x setup.sh && ./setup.sh",
+    "start": "nodemon --exec node --trace-warnings server.js",
     "restart_count": "npx prisma migrate dev --create-only --name restart_autoincrement",
     "postinstall": "patch-package"
   },
@@ -18,6 +18,7 @@
     "@faker-js/faker": "^9.8.0",
     "@prisma/client": "^6.8.2",
     "@quixo3/prisma-session-store": "^3.1.13",
+    "@socket.io/cluster-adapter": "^0.2.2",
     "babel-jest": "^29.7.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
@@ -36,6 +37,9 @@
     "patch-package": "^8.0.0",
     "prisma": "^6.7.0",
     "prisma-extension-bark": "^0.2.2",
+    "socket.io": "^4.8.1",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.1.1"
   },
   "proxy": "http://localhost:8080"
